# Wortually

worktually_v3_api/: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  settings.py
worktually_v3_api/authentication/: apps.py  models.py  serializers.py  urls.py  views.py
worktually_v3_api/authentication/migrations/: 0001_initial.py  0002_rename_employee_user.py  0003_delete_user.py
worktually_v3_api/dbrouters/: router.py
worktually_v3_api/employee/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
worktually_v3_api/employee/migrations/: 0001_initial.py  0002_alter_role_created_by.py
worktually_v3_api/employees/: models.py  serializers.py  views.py
worktually_v3_api/employees/migrations/: 0001_initial.py
worktually_v3_api/job_seekers/: admin.py  apps.py  email_templates.py  middleware.py  models.py  pagination.py  tasks.py  test.py  urls.py  views.py
worktually_v3_api/job_seekers/migrations/: 0001_initial.py  0002_alter_jobprofile_job_title_and_more.py  0003_remove_jobprofile_address_remove_jobprofile_city_and_more.py  0004_remove_jobprofile_job_profile_name.py  0005_rename_completion_date_education_from_date_and_more.py  0006_remove_jobprofileexperience_experience_letter_photo_and_more.py  0007_remove_language_language_id_remove_language_level_and_more.py  0008_language_created_at_language_updated_at.py  0009_rename_title_jobprofileportfolio_project_title_and_more.py  0010_alter_education_discipline.py  0011_delete_jobprofileexperience.py  0012_jobprofileexperience.py  0013_jobseeker_city_jobseeker_state_and_more.py  0014_alter_jobseeker_options_remove_jobseeker_source_id_and_more.py  0015_alter_jobseeker_groups.py  0016_alter_jobseeker_user_permissions.py  0017_alter_jobseeker_groups.py  0018_alter_jobseeker_options_alter_jobseeker_groups_and_more.py  0019_remove_jobseeker_groups_and_more.py  0020_remove_jobprofileexperience_job_seeker.py  0021_jobprofileexperience_job_seeker.py  0022_alter_jobprofile_completion_rate_and_more.py  0023_alter_jobprofile_job_seeker.py  0024_remove_jobprofileportfolio_files_and_more.py  0025_rename_portfolio_images_jobprofileportfolio_portfolio_image.py  0026_remove_jobprofileportfolio_portfolio_image_and_more.py  0027_jobseeker_created_at_jobseeker_timezone_and_more.py  0028_alter_jobprofile_completion_rate.py  0029_alter_jobseeker_status.py  0030_jobseeker_profile_picture_url.py
worktually_v3_api/lookups/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
worktually_v3_api/lookups/fixtures/: accounting.json  admin_softwares.json  advertising_tools.json  city.csv  (+30 more)
worktually_v3_api/middlewares/: common_middleware.py  jobposts_middleware.py  role_permission_middleware.py
worktually_v3_api/recruitment/: admin.py  api_decorators.py  models.py  serializers.py  tasks.py  urls.py  views.py
worktually_v3_api/worktually_v3_api/: .gitignore  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+158 files in other folders)
